--- a/index.html
+++ b/index.html
@@ -3,10 +3,41 @@
 <title> BOCK: A Board Game Clock
 </title>
 <link rel="stylesheet" type="text/css" href="style.css">
-<script type"text/javascript">
-Some javascripts here!
-</script>
+</head>
 <body>
-There will be a boardgame clock here soon!
+<div ID="timeClockA">
+   
+        <div ID="timeLabel" style="font-size:24pt;font-weight:bold;">0.00</div>
+        <input type="button" onclick="ActivateTimer();" value="Activate" />
+        <script language="javascript" type="text/javascript">
+            var min = 1;
+            var sec = 59;
+            var timer;
+            var timeon = 0;
+            function ActivateTimer() {
+                if (!timeon) {
+                    timeon = 1;
+                    Timer();
+                }
+            }
+            function Timer() {
+
+                var _time = min + ":" + sec;
+                document.getElementById("timeLabel").innerHTML =_time;
+                if (_time != "0:0") {
+
+                    if (sec == 0) {
+                        min = min - 1;
+                        sec = 59;
+                    } else {
+                        sec = sec - 1;
+                    }
+                    timer = setTimeout("Timer()", 1000);
+                }
+                else {
+                    alert("Time is Over");
+                }
+            }</script>
+</div>
 </body>
 </html>
