--- a/index.html
+++ b/index.html
@@ -7,13 +7,19 @@
 <body>
 <div ID="timeClockA">
    
-	<div ID="timeLabel" style="font-size:24pt;font-weight:bold;">4:59</div>
-        <input type="button" onclick="ActivateTimer();" value="Activate" />
+   
+	<div ID="timeLabel" style="font-size:24pt;font-weight:bold;">05:00</div>
+        <input type="button" onclick="ActivateTimer();" value="START" />
 		<input type="button" onclick="Stop();" value="STAHP" />
 		<input type="button" onclick="Reset();" value="RESET" />
-			<div ID="pauseLabel" style="font-size:24pt;font-weight:bold;font-color:#ff0000"></div>
+			<div ID="statusLabel" style="font-size:24pt;font-weight:bold;font-color:#ff0000"></div>
+	
+
+			
         <script type="text/javascript" src="timer.js">          
 			</script>
+			
+			
 </div>
 </body>
 </html>
